src/main/resources/static/style.css
/*
 * Copyright 2017-2023 The Polypheny Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

html {
    margin: 0;
    padding: 0;
    /*height: 100%;*/
    font-family: sans-serif;
}

div.root {
    max-width: 1500px;
    /*position: relative;
    height: auto !important;
    height: 100%;
    min-height: 100%;
    margin: 0px auto -6vw;*/
    padding-top: 5vh;
}

.footer {
    /*position: absolute;*/
    /*bottom: 0 !important;*/
    width: 100%;
    /*height: min(6vh, 55px);*/
    line-height: min(6vh, 50px); /* Vertically center the text there */
    margin: 0 auto;
    background-color: rgba(0, 0, 0, 0.28);
    font-size: min(1vw, 18px);
}

.footer-table {
    width: 100%;
    font-weight: 400;
}

#footer-left {
    text-align: left;
    padding: 0 1vw;
    width: 25%;
}

#footer-middle {
    text-align: center;
    padding: 0.2vw 0 0 0;
    width: 50%;
    line-height: min(1.3vw, 23px);
}

#footer-right {
    text-align: right;
    padding: 0 1vw;
    width: 25%;
}


body {
    /* background-color: #A5D7D2; */
    background-color: #3B83C8;
    margin: 0;
}

.main {
    max-width: 100%;
    min-height: calc(100% - 6vh - 5vh - 55px); /* 6vh is height of footer & 5vh margin between heading and top of the page */
    padding-bottom: 50px;
}

.dashboard {
    margin-left: 10%;
    text-align: center;
    /*margin-bottom: 5%;*/
    border-collapse: collapse;
    margin-bottom: -50px;
}

.circle {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    background-color: white;
    width: min(10vw, 170px);
    height: min(10vw, 170px);
    -moz-border-radius: min(5vw, 85px);
    -webkit-border-radius: min(5vw, 85px);
    border-radius: min(5vw, 85px);
    cursor: pointer;
    box-shadow: inset 0 0 0 0 rgba(200, 95, 66, 0.4), inset 0 0 0 16px rgba(255, 255, 255, 0.6), 0 1px 2px rgba(0, 0, 0, 0.1);
    transition: all 0.3s ease-in-out;
    margin-left: auto;
    margin-right: auto;
}

.heading {
    text-align: center;
    font-family: sans-serif;
    font-size: min(5vw, 90px);
    margin-bottom: 3vh;
    margin-top: 0;
}

.content {
    margin-left: auto;
    margin-right: auto;
    background-color: white;
    width: 70%;
    text-align: center;
    padding: 15px;
    box-shadow: 5px 5px 3px rgb(128, 128, 128);
}

.login-content {
    margin-left: auto;
    margin-right: auto;
    background-color: white;
    width: 40%;
    text-align: center;
    padding: 15px;
    box-shadow: 5px 5px 3px rgb(128, 128, 128);
}

.output {
    font-family: Consolas, Monaco, monospace;
    text-align: left;
    height: 340px;
    overflow: auto;
    border: solid black thin;
    margin: 0 15px 20px 15px;
    padding: 10px;
    white-space: pre;
    display: block;
    font-size: 13px;
}

.login-table {
    border-collapse: collapse;
    width: 100%;
    margin-bottom: 20px;
}

.login-table th, .login-table td {
    padding: 8px;
    text-align: left;
}

.login-table input {
    width: 95%;
    margin-left: 0;
    padding: 2%;
    font-size: 16px;
    border: 1px solid #bbb;
}

.configuration-table {
    border-collapse: collapse;
    width: 100%;
    margin-bottom: 20px;
}

.configuration-table th, .configuration-table td {
    padding: 8px;
    text-align: left;
    border-bottom: 1px solid #ddd;
}

/*
.configuration-table tr:hover {
    background-color: #f5f5f5
}*/

.configuration-table select {
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    width: 100%;
    padding: 2%;
    font-size: 16px;
    border: 1px solid #bbb;
    background-color: white;
    background-image: url(select-arrow.png);
    background-position: right;
    background-repeat: no-repeat;
}

.configuration-table input {
    width: 95%;
    margin-left: 0;
    padding: 2%;
    font-size: 16px;
    border: 1px solid #bbb;
}


/* http://callmenick.com/post/stylish-css-buttons */
.btn-blue,
.btn-back {
    color: #fff;
    background-color: #346392;
    text-shadow: -1px 1px #27496d;
    border: none;
    font-size: 25px;
    width: 200px;
    height: 50px;
}

.btn-back-disabled {
    background-color: #bfbfbf !important;
}

.btn-blue:hover,
.btn-blue.hover,
.btn-back:hover,
.btn-back.hover {
    background-color: #28486d;
    text-shadow: -1px 1px #193047;
}

.btn-red {
    color: #fff;
    background-color: #db0e3a;
    text-shadow: -1px 1px #6d272f;
    border: none;
    font-size: 25px;
    width: 200px;
    height: 50px;
}

.btn-red:hover,
.btn-red.hover {
    background-color: #b9082d;
    text-shadow: -1px 1px #542329;
}

.dropzone {
    margin-bottom: 15px;
}

/**
 * https://paulund.co.uk/how-to-style-a-checkbox-with-css
 */

/* Start by hiding the checkboxes */
input[type=checkbox] {
    visibility: hidden;
}

/* Create the slider bar */
.checkbox {
    width: 80px;
    height: 20px;
    background: #555;
    margin: 15px 2px;
    position: relative;
    border-radius: 6px;
}

/* Create the slider from the label */
.checkbox label {
    display: block;
    width: 32px;
    height: 32px;
    border-radius: 50%;
    transition: all .5s ease;
    cursor: pointer;
    position: absolute;
    top: -6px;
    left: -6px;
    background: #ccc;
}

/* Move the slider in the correct position if the checkbox is clicked */
.checkbox input[type=checkbox]:checked + label {
    left: 54px;
    background: #27cc1b;
}

/* Taken from https://loading.io/css/, CC0 License */
.lds-dual-ring {
    display: inline-block;
    width: 80px;
    height: 80px;
}

.lds-dual-ring:after {
    content: " ";
    display: block;
    width: 64px;
    height: 64px;
    margin: 8px;
    border-radius: 50%;
    border: 6px solid #000000;
    border-color: #000000 transparent #fff transparent;
    animation: lds-dual-ring 1.2s linear infinite;
}

@keyframes lds-dual-ring {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

